Correct code style and deprecated APIs #183